--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./app:/var/www/html/
     environment:
-      - PHP_ERROR_REPORTING=E_ALL
+        PHP_ERROR_REPORTING: E_ALL
     links: 
       - mysql
       - redis
